extend api docs
