# docs/docs/api/sidebar.ts
@@ -76,6 +76,66 @@ const sidebar: SidebarsConfig = {
           label: "Update the listening session",
           className: "api-method post",
         },
+        {
+          type: "doc",
+          id: "api/mark-a-track-as-played",
+          label: "Mark a track as played",
+          className: "api-method post",
+        },
+        {
+          type: "doc",
+          id: "api/get-queue",
+          label: "Get queue",
+          className: "api-method post",
+        },
+      ],
+    },
+    {
+      type: "category",
+      label: "playlist",
+      items: [
+        {
+          type: "doc",
+          id: "api/get-playlists",
+          label: "Get playlists",
+          className: "api-method get",
+        },
+        {
+          type: "doc",
+          id: "api/add-playlist",
+          label: "Add playlist",
+          className: "api-method put",
+        },
+        {
+          type: "doc",
+          id: "api/get-playlist",
+          label: "Get playlist",
+          className: "api-method get",
+        },
+        {
+          type: "doc",
+          id: "api/update-playlist",
+          label: "Update playlist",
+          className: "api-method post",
+        },
+        {
+          type: "doc",
+          id: "api/delete-playlist",
+          label: "Delete playlist",
+          className: "api-method delete",
+        },
+        {
+          type: "doc",
+          id: "api/add-items-to-playlist",
+          label: "Add items to playlist",
+          className: "api-method post",
+        },
+        {
+          type: "doc",
+          id: "api/remove-items-from-playlist",
+          label: "Remove items from playlist",
+          className: "api-method post",
+        },
       ],
     },
   ],
